; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/lib/extr_xor_vmx_glue.c_xor_altivec_2.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/lib/extr_xor_vmx_glue.c_xor_altivec_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xor_altivec_2(i64 %0, i64* %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i64* %2, i64** %6, align 8
  %7 = call i32 (...) @preempt_disable()
  %8 = call i32 (...) @enable_kernel_altivec()
  %9 = load i64, i64* %4, align 8
  %10 = load i64*, i64** %5, align 8
  %11 = load i64*, i64** %6, align 8
  %12 = call i32 @__xor_altivec_2(i64 %9, i64* %10, i64* %11)
  %13 = call i32 (...) @disable_kernel_altivec()
  %14 = call i32 (...) @preempt_enable()
  ret void
}

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i32 @enable_kernel_altivec(...) #1

declare dso_local i32 @__xor_altivec_2(i64, i64*, i64*) #1

declare dso_local i32 @disable_kernel_altivec(...) #1

declare dso_local i32 @preempt_enable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
